--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="selection-element" id="selection4">HEX</span>
             </div>
             <div class="input-group" id="group1">
-                <input type="text" placeholder="Wybierz system" class="input" id="input" disabled>
+                <input type="text" placeholder="Wybierz system" class="input" id="input">
                 <label for="input1" class="label" id="inputLabel">Wpisz liczbę w systemie dwójkowym</label>
             </div>
         </div>
