Alert for new visitors

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <title>Konwerter systemów liczbowych</title>
     <meta name="author" content="Marek Żywar">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
+    <div class="visitor-alert visitor-alert-hidden" id="modal">
+        <div class="visitor-alert-content">
+            <h4>Drogi użytkowniku!</h4>
+            <p>Projekt nie jest jeszcze ukończony i nie funkcjonuje prawidłowo. Obecny status prac można zobaczyć na GitHubie.</p>
+            <p>Repozytorium: <a href="https://github.com/Forcowicz/Konwerter-systemow-liczbowych">Kliknij, aby przejść na stronę GitHub.</a></p>
+            <button class="btn" id="modalBtn">Rozumiem</button>
+        </div>
+    </div>
+    <script src="modal.js"></script>
     <section class="page-content">
         <div class="heading">
             <h1>Konwerter systemów liczbowych</h1>
