Added credits section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@
     <section class="credits credits-hidden" id="creditsModal">
         <div class="credits-content">
             <span class="content-close" id="creditsBtnClose">&times;</span>
+            <figure>
+                <img src="images/profile.jpg" alt="Profile picture">
+                <small>Forcowicz</small>
+            </figure>
             <h4>Autor: Marek Żywar (Forcowicz)</h4>
-            <p>Ikony stworzone przez: Gregor Cresnar dla Flaticon</p>
+            <p>Ikony stworzone przez: <a href="https://www.flaticon.com/authors/gregor-cresnar">Gregor Cresnar</a> dla Flaticon</p>
         </div>
     </section>
     <script src="modal.js"></script>
