Binary system input validation & some bug fixes

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                 </span>
                 <span class="output">
                     <small class="output-label">Dziesiętny (DEX)</small>
-                    <span>2037</span>
+                    <span id="outputDex">Wpisz liczbę</span>
                     <svg class="icon icon-output">
                         <use xlink:href="icons/sprite.svg#copy"></use>
                     </svg>
                 </span>
                 <span class="output">
                     <small class="output-label">Szesnastkowy (HEX)</small>
-                    <span>7F5</span>
+                    <span id="outputHex">Wpisz liczbę</span>
                     <svg class="icon icon-output">
                         <use xlink:href="icons/sprite.svg#copy"></use>
                     </svg>
