Added input check for every system & removed icons

--- a/index.html
+++ b/index.html
@@ -40,31 +40,19 @@
             <div class="output-group">
                 <span class="output">
                     <small class="output-label">Dwójkowy (BIN)</small>
-                    <span>11111110101</span>
-                    <svg class="icon icon-output">
-                        <use xlink:href="icons/sprite.svg#copy"></use>
-                    </svg>
+                    <span id="outputBin">Wpisz liczbę</span>
                 </span>
                 <span class="output">
                     <small class="output-label">Ósemkowy (OCT)</small>
-                    <span>3765</span>
-                    <svg class="icon icon-output">
-                        <use xlink:href="icons/sprite.svg#copy"></use>
-                    </svg>
+                    <span id="outputOct">Wpisz liczbę</span>
                 </span>
                 <span class="output">
                     <small class="output-label">Dziesiętny (DEX)</small>
                     <span id="outputDex">Wpisz liczbę</span>
-                    <svg class="icon icon-output">
-                        <use xlink:href="icons/sprite.svg#copy"></use>
-                    </svg>
                 </span>
                 <span class="output">
                     <small class="output-label">Szesnastkowy (HEX)</small>
                     <span id="outputHex">Wpisz liczbę</span>
-                    <svg class="icon icon-output">
-                        <use xlink:href="icons/sprite.svg#copy"></use>
-                    </svg>
                 </span>
             </div>
         </div>
@@ -80,7 +68,6 @@
                 <small>Forcowicz</small>
             </figure>
             <h4>Autor: Marek Żywar (Forcowicz)</h4>
-            <p>Ikony stworzone przez: <a href="https://www.flaticon.com/authors/gregor-cresnar">Gregor Cresnar</a> dla Flaticon</p>
         </div>
     </section>
     <script src="modal.js"></script>
